# proteomicRuler

./: .gitignore  LICENSE  README.md  main.py  main2.py  pyproject.toml  requirements.txt
examples/: TMT_copy_number.ipynb
proteomicRuler/: cli.py  constant.py  histones.py  organisms.json  ruler.py  test_cli.py  test_ruler.py
uniprot/: parser.py
